<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center"
    tools:context=".MainActivity"
    android:background="#00BCD4">

    <!--stdnt id input-->
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/id_hint"
        android:id="@+id/editText7"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        />
    <!--course -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <EditText
            android:id="@+id/code_editText"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/codehint"
            android:layout_marginEnd="10dp"
            />

        <EditText
            android:id="@+id/credit_editText"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/credithint" />

    </LinearLayout>
    <!--ct & atndnc-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/ctmark_editText"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/ctmarkhint"
            android:layout_marginEnd="10dp"
            />

        <EditText
            android:id="@+id/atndnc_mark_editText"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"

            android:hint="@string/atndncmark" />
    </LinearLayout>
    <!--part A, B-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/parta_editText"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:hint="@string/amark" />

        <EditText
            android:id="@+id/partB_editText"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/bmark"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/add_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/addbtn"
            android:textStyle="bold"
            android:layout_marginEnd="10dp"
            android:onClick="store" />

        <Button
            android:id="@+id/update_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:textStyle="bold"
            android:layout_marginEnd="10dp"
            android:onClick="UpdateSub" />

        <Button
            android:id="@+id/delete_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/dltbtn"
            android:textStyle="bold"
            android:onClick="DeleteSub"/>
    </LinearLayout>

    <Button
        android:id="@+id/cgpa_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="SeeResult"
        android:text="@string/cgpabtn"
        android:textStyle="bold" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/showall"
        android:textStyle="bold"
        android:id="@+id/button2"
        android:onClick="show"
        android:layout_marginTop="10dp"/>

</LinearLayout>
